# spargel

./: .clang-format  .clangd  .gitignore  .gn  BUILD.gn  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  Readme.md  xmake.lua
base/: BUILD.gn  CMakeLists.txt
base/callback/: BUILD.gn  callback.h
base/compiler/: BUILD.gn  has_builtin.h  unreachable.h
base/logging/: BUILD.gn  logging.cc  logging.h
base/memory/: BUILD.gn  ref_count_ptr.h  ref_count_ptr_test.cc  ref_counted.h
base/meta/: BUILD.gn  forward.h  source_location.h
base/task/: BUILD.gn  sequenced_task_runner.cc  sequenced_task_runner.h  single_threaded_task_runner.cc  single_threaded_task_runner.h  task_runner.cc  task_runner.h
engine/: CMakeLists.txt  engine.sln
engine/SpargelEngine.Core/: Hello.cs
engine/SpargelEngine.Core.Tests/: HelloTests.cs  SpargelEngine.Core.Tests.csproj
engine/SpargelEngine.Core/Ecs/: Entity.cs  EntityManager.cs  IComponent.cs  ISystem.cs  SystemManager.cs  World.cs
engine/SpargelEngine.Demos.HelloTriangle/: HelloTriangleApplication.cs  Program.cs  SpargelEngine.Demos.HelloTriangle.csproj
engine/SpargelEngine.Demos.LearnOpenGL/: Program.cs  SpargelEngine.Demos.LearnOpenGL.csproj
engine/SpargelEngine.Demos.MacWindow/: Program.cs  README.md
engine/SpargelEngine.Demos.SimpleShot/: CameraComponent.cs  ColorComponent.cs  DestroySelfComponent.cs  DestroySelfSystem.cs  InputComponent.cs  LaunchProjectileComponent.cs  LaunchProjectileSystem.cs  MoveAlongXComponent.cs  MoveAlongXSystem.cs  PlayerControlComponent.cs  PlayerControlSystem.cs  PositionComponent.cs  Program.cs  RectangleComponent.cs  RenderSystem.cs  SpargelEngine.Demos.SimpleShot.csproj  TimeComponent.cs
engine/SpargelEngine.GUI.Window/: Key.cs  KeyStatus.cs  Window.cs  WindowSystem.cs
engine/SpargelEngine.GUI.Window.GLFW/: Glfw.cs  GlfwKeyMap.cs  GlfwWindow.cs  GlfwWindowSystem.cs  SpargelEngine.GUI.Window.GLFW.csproj
engine/SpargelEngine.Graphics.OpenGL/: OpenGL.api.cs  OpenGL.cs  OpenGLGeneric.cs  OpenGLWindows.cs
engine/SpargelEngine.Graphics.OpenGL/Linux/: OpenGLLinux.cs
engine/SpargelEngine.Graphics.Vulkan/: ApplicationInfo.cs  Instance.cs  InstanceCreateInfo.cs  StructureType.cs  Vulkan.ApplicationInfo.cs  Vulkan.ExtensionProperties.cs  Vulkan.InstanceCreateInfo.cs  Vulkan.Result.cs  Vulkan.api.cs  Vulkan.cs  VulkanGeneric.cs
engine/SpargelEngine.Graphics.Vulkan/Linux/: VulkanLinux.cs
engine/ecs/: ecs.h  ecs_alt.h  entity_manager.cc  entity_manager.h
engine/ui/: window.cc  window.h  window_delegate.h
games/vulkan_triangle/: CMakeLists.txt  app.cc  app.h  app_delegate.cc  app_delegate.h  app_delegate_mac.h  app_delegate_mac.mm  app_delegate_win.h  logging.cc  main.cc  proc_table.h  utils.cc  utils.h
modules/editor/: BUILD.gn  CMakeLists.txt  Info.plist
modules/editor/private/: main.cc
modules/gpu/: BUILD.gn  CMakeLists.txt  build_flags.gni
modules/gpu/private/: gpu.cc
modules/gpu/public/: gpu.h
modules/platform/: BUILD.gn
modules/platform/private/: platform.cc
modules/platform/public/: platform.h
modules/ui/: BUILD.gn  CMakeLists.txt
modules/ui/private/: platform.cc  render_target.cc  renderer.cc  types.cc  window.cc  window_delegate.cc
modules/ui/public/: platform.h  render_target.h  renderer.h  types.h  window.h
samples/: BUILD.gn  CMakeLists.txt  baby_ecs.cc  bit_array.h  bit_array_demo.cc  demo.cc  ecs.cc  ecs.h  ecs2.cc  ecs3.cc  ecs_bench.cc  ecs_demo.c  hello_glfw.cc  mac_window.cc  message_pump.cc  perf.c  platform_window.cc  x11_window.c
samples/vulkan_triangle/: BUILD.gn  CMakeLists.txt  app.cc  app.h  app_delegate.cc  app_delegate.h  app_delegate_mac.h  app_delegate_mac.mm  app_delegate_win.cc  logging.cc  logging.h  main.cc  proc_table.h  utils.cc  utils.h  vulkan_headers.h  vulkan_procs.inc
source/editor/: CMakeLists.txt  main.c  main.cc  main.cpp  node_editor_mac.cpp
source/spargel/: CMakeLists.txt  autoconfig.h.in  config.h  config.h.in
source/spargel/base/: CMakeLists.txt  algorithm.h  allocator.cc  allocator.cpp  allocator.h  assert.h  backtrace.h  backtrace_demo.c  backtrace_demo.cpp  backtrace_mac.cpp  base.c  base.cpp  base.h  base.mpp  base_c.cpp  base_c.mpp  base_linux.c  base_mac.c  base_test.cpp  base_win.c  compiler.h  const.h  demo_backtrace.cpp  demo_get_executable_path.c  demo_get_executable_path.cpp  demo_get_executable_path_linux.cc  demo_get_executable_path_win.cc  executable_path_demo.c  executable_path_demo.cpp  format.h  get_executable_path_linux.cc  get_executable_path_win.cc  initializer_list.h  log_demo.c  log_demo.cpp  logging.cpp  logging.h  meta.h  meta_test.cpp  object.h  (+40 more)
source/spargel/codec/: CMakeLists.txt  codec.c  codec.cpp  codec.h  codec.mpp  cursor.c  cursor.cpp  cursor.h  cursor.mpp  dump_json.c  dump_json.cpp  json.c  json.cpp  json_dump.c  ppm.c  ppm.cpp  ppm_info.c  ppm_info.cpp
source/spargel/ecs/: CMakeLists.txt  ecs.c  ecs.cc  ecs.cpp  ecs.h  ecs.mpp  ecs_demo.c  ecs_demo.cpp  ecs_test.c  ecs_test.cpp
source/spargel/entry/: CMakeLists.txt  component.h  component_demo.cpp  launch_data.h  launcher_mac.cpp  simple.c  simple.cpp  simple.h  simple_android.cpp  simple_demo.c  simple_demo.cpp
source/spargel/gpu/: CMakeLists.txt  demo_gpu.c  demo_gpu.cpp  gen.py  gpu.c  gpu.cc  gpu.cpp  gpu.h  gpu.mpp  gpu2.h  gpu3.cpp  gpu3.h  gpu3_metal.h  gpu3_metal.mm  gpu_dx.h  gpu_metal.h  gpu_metal.m  gpu_metal.mm  gpu_mtl.h  gpu_mtl.m  gpu_vk.c  gpu_vk.cpp  gpu_vk.h  gpu_vulkan.c  gpu_vulkan.cpp  gpu_vulkan.h  operations.h  registry.json  vulkan_procs.inc
source/spargel/renderer/: CMakeLists.txt  dummy.c  renderer.h  renderer_mtl.m  renderer_mtl.mm  shader.metal  shader_types_mtl.h
source/spargel/resource/: CMakeLists.txt  android_asset.cpp  android_asset.h  demo_DirectoryResourceManager.cc  demo_EmptyResourceManager.cc  demo_directory.c  demo_directory.cpp  demo_directory_resource_manager.cc  demo_empty.c  demo_empty.cpp  demo_empty_resource_manager.cc  directory.c  directory.cpp  directory.h  directory_resource_manager.cc  empty.c  empty.cpp  empty.h  resource.c  resource.cpp  resource.h  (+1 more)
(+270 files in other folders)
