group("default") {
  deps = [
    "//base",
    "//gpu",

    # tests
    "//base/memory:ref_count_ptr_test",

    # samples
    "//samples:demo",
    "//samples/vulkan_triangle",
    "//samples:platform_window",

    # modules
    "//modules/base",
    "//modules/gpu",
    "//modules/platform",
    "//modules/window",

    # games
    "//games/myth",

    "//third_party/glslang",
  ]
  if (is_macos) {
    deps += []
  }
}
