group("default") {
  deps = [
    "//base",
    "//gpu",

    # tests
    "//base/memory:ref_count_ptr_test",

    # samples
    "//samples:demo",
    "//samples/vulkan_triangle",

    # modules
    "//modules/base",
    "//modules/editor",
    "//modules/gpu",
    "//modules/ui",

    # games
    "//games/myth",

    "//third_party/glslang",
  ]
  if (is_macos) {
    deps += [
      "//modules/editor:SpargelEditor.app"
    ]
  }
}
