group("default") {
  deps = [
    "//games/myth",

    "//modules/base",
    "//modules/editor",
    "//modules/gpu",
    "//modules/ui",

    "//samples:demo",
    "//samples/vulkan_triangle",

    "//third_party/glslang",
  ]
  if (is_macos) {
    deps += [
      "//modules/editor:SpargelEditor.app"
    ]
  }
}
