# add_library(SpargelEngine STATIC)
# target_sources(SpargelEngine
#   PUBLIC
#   PRIVATE
# )
# target_include_directories(SpargelEngine
#   PUBLIC "${PROJECT_SOURCE_DIR}"
# )
# target_compile_features(SpargelEngine
#   PUBLIC cxx_std_20
# )

# if (APPLE)
#   target_sources(SpargelEngine
#     PRIVATE
#   )
# endif ()
