executable("demo") {
  sources = [
    "demo.cc",
    "ecs.cc",
    "ecs.h",
  ]
  deps = [
    "//third_party/glad",
    "//third_party/glfw",
    "//third_party/nanovg",
    "//third_party/nanovg:nanovg_perf",
    "//third_party/tracy:tracy_client",
  ]
}
executable("platform_window") {
  sources = [ "platform_window.cc" ]
  deps = [
    "//modules/platform",
    "//modules/window",
  ]
}
