import("//build/build_flags.gni")
import("//modules/gpu/build_flags.gni")

build_flags("gpu_build_flags") {
  header = "build_flags.h"
  flags = [
    "ENABLE_DIRECTX=$enable_directx",
    "ENABLE_METAL=$enable_metal",
    "ENABLE_VULKAN=$enable_vulkan",
  ]
}

source_set("gpu") {
  public = [
    "public/gpu.h",
  ]
  sources = [
    "private/gpu.cc",
  ]
  if (enable_directx) {
    sources += [
      "private/directx/directx.h",
      "private/directx/directx.cc",
    ]
  }
  if (enable_metal) {
    sources += [
      "private/metal/metal.h",
      "private/metal/metal.cc",
    ]
  }
  if (enable_vulkan) {
    sources += [
      "private/vulkan/vulkan.h",
      "private/vulkan/vulkan.cc",
    ]
  }
  deps = [
    ":gpu_build_flags",
  ]
}
