executable("vulkan_triangle") {
  sources = [
    "app.cc",
    "app.h",
    "app_delegate.cc",
    "app_delegate.h",
    "app_delegate_mac.h",
    "app_delegate_mac.mm",
    "main.cc",
    "proc_table.h",
    "utils.cc",
    "utils.h",
    "vulkan_procs.inc",
    "logging.cc",
    "logging.h",
  ]
  deps = [
    "//third_party/vulkan_headers",
  ]
  if (is_macos) {
    frameworks = [
      "AppKit.framework",
      "QuartzCore.framework",
    ]
  }
}
