executable("vulkan_triangle") {
  sources = [
    "app.cc",
    "app.h",
    "app_delegate.cc",
    "app_delegate.h",
    "main.cc",
    "proc_table.h",
    "utils.cc",
    "utils.h",
    "vulkan_procs.inc",
    "logging.cc",
    "logging.h",
  ]
  deps = [
    "//third_party/vulkan_headers",
  ]
  if (is_macos) {
    sources += [
      "app_delegate_mac.h",
      "app_delegate_mac.mm",
    ]
    frameworks = [
      "AppKit.framework",
      "QuartzCore.framework",
    ]
  }
  if (is_windows) {
    sources += [
      "app_delegate_win.h",
      "app_delegate_win.cc",
    ]
  }
}
